# django-cancan

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  manage.py  requirements.txt  setup.cfg  setup.py
cancan/: ability.py  access_rules.py  apps.py  context_processors.py  middleware.py
cancan/templatetags/: cancan_tags.py
cancan/testapp/: abilities.py  models.py  testsettings.py  views.py
cancan/testapp/migrations/: 0001_initial.py
cancan/testapp/templates/testapp/: article_list.html
cancan/testapp/tests/: test_core.py  test_middleware.py  urls.py
cancango/testapp/: models.py  testsettings.py
cancango/testapp/tests/: test_core.py  urls.py
django-cancango/: README.md  notes.txt
django_cancango_sample/: db.sqlite3  manage.py
django_cancango_sample/django_cancango_sample/: asgi.py  settings.py  urls.py  wsgi.py
django_cancango_sample/sample/: views.py
django_cancango_sample/sample/migrations/: 0001_initial.py
django_cancango_sample/sample/templates/sample/: todoitem_detail.html  todoitem_list.html
example_project/: Pipfile  README.md  abilities.py  asgi.py  cancan_playground.ipynb  conftest.py  pytest.ini  settings.py  urls.py  wsgi.py
example_project/core/: admin.py  models.py  tests.py  views.py
example_project/core/migrations/: 0001_initial.py
example_project/core/templates/: home.html
example_project/core/templates/core/: project_detail.html  project_form.html  project_list.html
example_project/sample/: admin.py  models.py  views.py
example_project/sample/migrations/: 0001_initial.py
